# web-scraper

./: .gitignore  README.md  pyproject.toml
tests/: test_scraper.py
web_scraper/: scraper.py
