[tool.poetry]
name = "web-scraper"
version = "0.1.0"
description = ""
authors = ["Leo Kukharau <kuhorev.leonid@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
requests = "^2.24.0"
pytest = "^5.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.3"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
